# SIFT

./: CMakeLists.txt  README.md  SIFT.cpp  SIFT.h  lib.h  main.cpp  test.cpp  utils.cpp  utils.h
src/: lib.cpp  lib.h  utils.cpp  utils.h
test/: test.cpp
